--- a/products.html
+++ b/products.html
@@ -26,7 +26,7 @@
 
   <h1 class="site-heading text-center text-white d-none d-lg-block">
   	<span class="site-heading-upper text-primary mb-3">Bienvenido a la revolución del marketing</span>
-    <span class="site-heading-lower">Aarden</span>
+    <span class="site-heading-lower">Aarden logo</span>
   </h1>
 
   <!-- Navigation -->
@@ -63,15 +63,15 @@
         <div class="product-item-title d-flex">
           <div class="bg-faded p-5 d-flex ml-auto rounded">
             <h2 class="section-heading mb-0">
-              <span class="section-heading-upper">Blended to Perfection</span>
-              <span class="section-heading-lower">Coffees &amp; Teas</span>
+              <span class="section-heading-upper">Publicidad a la mano</span>
+              <span class="section-heading-lower">Panfletos</span>
             </h2>
           </div>
         </div>
-        <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/products-01.jpg" alt="">
+        <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/panfleto3.jpg" alt="">
         <div class="product-item-description d-flex mr-auto">
           <div class="bg-faded p-5 rounded">
-            <p class="mb-0">We take pride in our work, and it shows. Every time you order a beverage from us, we guarantee that it will be an experience worth having. Whether it's our world famous Venezuelan Cappuccino, a refreshing iced herbal tea, or something as simple as a cup of speciality sourced black coffee, you will be coming back for more.</p>
+            <p class="mb-0">Son papeles kraft con formato de cupones de descuento. Cada papel tiene una cantidad de 40 espacios publicitarios de diversas marcas. Esto quiere decir, que el panfleto no se enfoca a una sola marca o sector de esta misma, sino que, ofrece descuentos de diferentes marcas y sectores. De esta forma, el cliente que obtiene el panfleto, cuida más sus descuentos, ya que, se ve beneficiado en varios sectores.</p>
           </div>
         </div>
       </div>
@@ -84,36 +84,16 @@
         <div class="product-item-title d-flex">
           <div class="bg-faded p-5 d-flex mr-auto rounded">
             <h2 class="section-heading mb-0">
-              <span class="section-heading-upper">Delicious Treats, Good Eats</span>
-              <span class="section-heading-lower">Bakery &amp; Kitchen</span>
+              <span class="section-heading-upper">Siempre necesarias</span>
+              <span class="section-heading-lower">Bolsas de Pan</span>
             </h2>
           </div>
         </div>
-        <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/products-02.jpg" alt="">
+        <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/bolsa1.jpg" alt="">
         <div class="product-item-description d-flex ml-auto">
           <div class="bg-faded p-5 rounded">
-            <p class="mb-0">Our seasonal menu features delicious snacks, baked goods, and even full meals perfect for breakfast or lunchtime. We source our ingredients from local, oragnic farms whenever possible, alongside premium vendors for specialty goods.</p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <section class="page-section">
-    <div class="container">
-      <div class="product-item">
-        <div class="product-item-title d-flex">
-          <div class="bg-faded p-5 d-flex ml-auto rounded">
-            <h2 class="section-heading mb-0">
-              <span class="section-heading-upper">From Around the World</span>
-              <span class="section-heading-lower">Bulk Speciality Blends</span>
-            </h2>
-          </div>
-        </div>
-        <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/products-03.jpg" alt="">
-        <div class="product-item-description d-flex mr-auto">
-          <div class="bg-faded p-5 rounded">
-            <p class="mb-0">Travelling the world for the very best quality coffee is something take pride in. When you visit us, you'll always find new blends from around the world, mainly from regions in Central and South America. We sell our blends in smaller to large bulk quantities. Please visit us in person for more details.</p>
+            <p class="mb-0">Son bolsas de papel kraft, que contienen entre 34 y 50 espacios publicitarios. Las panaderías o tiendas que necesiten de estas bolsas, las obtendrán gratis con el objetivo de que disminuyan su costo quitando la inversión de las bolsas, y además distribuyendo la publicidad que aparece en las bolsas a familias. Siendo de esta manera, un medio más efectivo que un panfleto común y corriente para divulgar la marca, ya que, impacta a más de 200.000 personas por sector, y por más tiempo de observación.
+</p>
           </div>
         </div>
       </div>
@@ -122,7 +102,7 @@
 
   <footer class="footer text-faded text-center py-5">
     <div class="container">
-      <p class="m-0 small">Copyright &copy; Your Website 2019</p>
+      <p class="m-0 small">Copyright &copy; Torrico & Asociados 2019</p>
     </div>
   </footer>
 
