--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
 
   <h1 class="site-heading text-center text-white d-none d-lg-block">
     <span class="site-heading-upper text-primary mb-3">Bienvenido a la revolución del marketing</span>
-    <span class="site-heading-lower">Aarden</span>
+    <span class="site-heading-lower">Aarden logo</span>
   </h1>
 
   <!-- Navigation -->
@@ -56,20 +56,25 @@
       </div>
     </div>
   </nav>
-
+  
   <section class="page-section about-heading">
     <div class="container">
-      <img class="img-fluid rounded about-heading-img mb-3 mb-lg-0" src="img/about.jpg" alt="">
+      <img class="img-fluid rounded about-heading-img mb-3 mb-lg-0" src="img/about3.jpg" alt="">
       <div class="about-heading-content">
         <div class="row">
           <div class="col-xl-9 col-lg-10 mx-auto">
             <div class="bg-faded rounded p-5">
               <h2 class="section-heading mb-4">
-                <span class="section-heading-upper">Strong Coffee, Strong Roots</span>
-                <span class="section-heading-lower">About Our Cafe</span>
+                <span class="section-heading-upper">Nuestra Empresa</span>
+                <span class="section-heading-lower">¿Quiénes Somos?</span>
               </h2>
-              <p>Founded in 1987 by the Hernandez brothers, our establishment has been serving up rich coffee sourced from artisan farmers in various regions of South and Central America. We are dedicated to travelling the world, finding the best coffee, and bringing back to you here in our cafe.</p>
-              <p class="mb-0">We guarantee that you will fall in <em>lust</em> with our decadent blends the moment you walk inside until you finish your last sip. Join us for your daily routine, an outing with friends, or simply just to enjoy some alone time.</p>
+              <p>Fundada por jóvenes emprendedores en 2019, Aarden nació con la intención de crear una serie de productos innovadores que cumpliesen con el deseo de nuestros clientes sin dejar de lado nuestra responsabilidad con el medio ambiente.</p>
+              <h2 class="section-heading mb-4">
+         
+                <span class="section-heading-lower">Innovador</span>
+              </h2>
+              <p>Lo atractivo de nuestros productos y servicios es que tienen una fuerte conexión con la alta eficiencia de divulgación de marcas, como también con generar un impacto social, ambiental y ecológico.</p>
+
             </div>
           </div>
         </div>
@@ -77,9 +82,10 @@
     </div>
   </section>
 
+
   <footer class="footer text-faded text-center py-5">
     <div class="container">
-      <p class="m-0 small">Copyright &copy; Your Website 2019</p>
+      <p class="m-0 small">Copyright &copy; Torrico & Asociados 2019</p>
     </div>
   </footer>
 
