--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
   <h1 class="site-heading text-center text-white d-none d-lg-block">
     <span class="site-heading-upper text-primary mb-3">Bienvenido a la revolución del marketing</span>
-    <span class="site-heading-lower">Aarden</span>
+    <span class="site-heading-lower">Aarden LOGO</span>
   </h1>
 
   <!-- Navigation -->
@@ -60,13 +60,13 @@
   <section class="page-section clearfix">
     <div class="container">
       <div class="intro">
-        <img class="intro-img img-fluid mb-3 mb-lg-0 rounded" src="img/intro.jpg" alt="">
+        <img class="intro-img img-fluid mb-3 mb-lg-0 rounded" src="img/intro2.jpg" alt="">
         <div class="intro-text left-0 text-center bg-faded p-5 rounded">
           <h2 class="section-heading mb-4">
             <span class="section-heading-upper">Publicidad ecológica y sustentable</span>
             <span class="section-heading-lower">¡Por un mundo mejor!</span>
           </h2>
-          <p class="mb-3">Y, viéndole don Quijote de aquella manera, con muestras de tanta tristeza, le dijo: Sábete, Sancho, que no es un perro.
+          <p class="mb-3">Nuestro objetivo, es promover la preferencia ecológica siendo más eficientes que otros tipos de divulgaciones publicitarias contaminantes.
           </p>
           <div class="intro-button mx-auto">
             <a class="btn btn-primary btn-xl" href="#">¡Contáctanos!</a>
@@ -82,10 +82,10 @@
         <div class="col-xl-9 mx-auto">
           <div class="cta-inner text-center rounded">
             <h2 class="section-heading mb-4">
-              <span class="section-heading-upper">Nuestro compromiso</span>
-              <span class="section-heading-lower">Con el Mundo</span>
+              <span class="section-heading-upper">Generar un impacto</span>
+              <span class="section-heading-lower">En el Mundo</span>
             </h2>
-            <p class="mb-0">Y, viéndole don Quijote de aquella manera, con muestras de tanta tristeza, le dijo: Sábete, Sancho, que no es un hombre más que otro si no hace más que otro.</p>
+            <p class="mb-0">Nuestros productos, servicios y proyectos amigables con el medio ambiente, promueven concientización en el área de publicidad y combaten el desperdicio, polución de bolsas plásticas y un sinfín de materiales mediáticos no biodegradables.</p>
           </div>
         </div>
       </div>
@@ -94,7 +94,7 @@
 
   <footer class="footer text-faded text-center py-5">
     <div class="container">
-      <p class="m-0 small">Copyright &copy; Your Website 2019</p>
+      <p class="m-0 small">Copyright &copy; Torrico & Asociados 2019</p>
     </div>
   </footer>
 
