--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           <p class="mb-3">Nuestro objetivo, es promover la preferencia ecológica siendo más eficientes que otros tipos de divulgaciones publicitarias contaminantes.
           </p>
           <div class="intro-button mx-auto">
-            <a class="btn btn-primary btn-xl" href="#">¡Contáctanos!</a>
+            <a class="btn btn-primary btn-xl" href="store.html">¡Contáctanos!</a>
           </div>
         </div>
       </div>
@@ -94,7 +94,7 @@
 
   <footer class="footer text-faded text-center py-5">
     <div class="container">
-      <p class="m-0 small">Copyright &copy; Torrico & Asociados 2019</p>
+      <p class="m-0 small">Copyright &copy; Aarden 2019</p>
     </div>
   </footer>
 
