--- a/products.html
+++ b/products.html
@@ -26,7 +26,7 @@
 
   <h1 class="site-heading text-center text-white d-none d-lg-block">
   	<span class="site-heading-upper text-primary mb-3">Bienvenido a la revolución del marketing</span>
-    <span class="site-heading-lower">Aarden logo</span>
+    <span class="site-heading-lower"><b>Aarden</b></span>
   </h1>
 
   <!-- Navigation -->
@@ -102,7 +102,7 @@
 
   <footer class="footer text-faded text-center py-5">
     <div class="container">
-      <p class="m-0 small">Copyright &copy; Torrico & Asociados 2019</p>
+      <p class="m-0 small">Copyright &copy; Aarden 2019</p>
     </div>
   </footer>
 
