--- a/store.html
+++ b/store.html
@@ -29,7 +29,7 @@
 
     <h1 class="site-heading text-center text-white d-none d-lg-block">
        <span class="site-heading-upper text-primary mb-3">Bienvenido a la revolución del marketing</span>
-	   <span class="site-heading-lower">Aarden logo</span>
+	   <span class="site-heading-lower"><b>Aarden</b></span>
     </h1>
 
     <!-- Navigation -->
@@ -101,7 +101,7 @@
                             
                           </a>
                           <hr class="my-4">
-                          <h4 class="text-uppercase m-0">Contactanos en WhatsApp</h4>
+                          <h4 class="text-uppercase m-0">Contáctanos en WhatsApp</h4>
                           <!--<div class="small text-black-50">Contactanos a WhatsApp</div>-->
                       </div>
                   </div>
